--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@ant-design/icons": "^5.1.4",
-        "antd": "^5.5.0"
+        "antd": "^5.5.0",
+        "sass": "^1.64.2"
     }
 }
