--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "inertiajs/inertia-laravel": "^0.6.3",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
+        "laravel/socialite": "^5.9",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-medialibrary": "^10.0.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
