--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/socialite": "^5.9",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-directory-cleanup": "^1.9",
         "spatie/laravel-medialibrary": "^10.0.0",
+        "spatie/laravel-tags": "^4.5",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
